handle APIrate limit with deque

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,6 +1,6 @@
 FROM tiangolo/meinheld-gunicorn:python3.6
 
-LABEL maintainer="Sebastian Ramirez <tiangolo@gmail.com>"
+LABEL maintainer="PoYu Huang <pubmedsubscription@gmail.com>"
 
 RUN pip install flask==1.1.1
 
@@ -11,3 +11,7 @@ RUN pip install pymongo[srv]==3.10.0
 RUN pip install passlib==1.7.2
 
 RUN pip install requests==2.22.0
+
+COPY ./flaskr /app/flaskr
+
+CMD export FLASK_APP=flaskr && flask run -h 0.0.0.0
